# chaos-synth

./: .gitignore  README.md  pyproject.toml  render_wav.py  test_a3_longterm.py  test_a4_presets.py
config/: default.toml
config/presets/: test_logistic.toml  test_roessler.toml  test_roundtrip.toml
docs/: chaos-synth-plan.md
docs/plans/: 2026-05-13-phase3-engine-ui.md  2026-05-14-phase4-granular-refactor.md  2026-05-14-phase4b-3d-position.md  2026-05-14-phase4c-macros.md
src/: main.py  presets.py
src/ui/: app.py
